# routers/commentsRouter_controllers.go
@@ -45,6 +45,15 @@ func init() {
 
     beego.GlobalControllerRouter["github.com/udistrital/autenticacion_mid/controllers:TokenController"] = append(beego.GlobalControllerRouter["github.com/udistrital/autenticacion_mid/controllers:TokenController"],
         beego.ControllerComments{
+            Method: "ClientAuth",
+            Router: "/clientAuth",
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/udistrital/autenticacion_mid/controllers:TokenController"] = append(beego.GlobalControllerRouter["github.com/udistrital/autenticacion_mid/controllers:TokenController"],
+        beego.ControllerComments{
             Method: "GetDocumento",
             Router: "/documentoToken",
             AllowHTTPMethods: []string{"post"},
