# swagger/swagger.json
@@ -179,6 +179,37 @@
                 }
             }
         },
+        "/token/clientAuth": {
+            "post": {
+                "tags": [
+                    "token"
+                ],
+                "description": "Recibe el id del cliente y el numero de documento asociado",
+                "operationId": "TokenController.ClientAuth",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "ClienteId y Numero de Documento del usuario",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ClientAuthRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ClientAuthRequestBody"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
         "/token/documentoToken": {
             "post": {
                 "tags": [
@@ -285,6 +316,18 @@
         "645.0x14000306ea0.false": {
             "title": "false",
             "type": "object"
+        },
+        "models.ClientAuthRequestBody": {
+            "title": "ClientAuthRequestBody",
+            "type": "object",
+            "properties": {
+                "clienteId": {
+                    "type": "string"
+                },
+                "documento": {
+                    "type": "string"
+                }
+            }
         },
         "models.Documento": {
             "title": "Documento",
